# poetry-test

./: README.md  poetry_test.py  pyproject.toml
package-a/: package_a.py  pyproject.toml
